# money_tracker

./: .env_example  README.md  pyproject.toml
config/: settings.py  urls.py
transactions/: forms.py  models.py  urls.py  views.py
transactions/migrations/: 0001_initial.py
transactions/templates/transactions/: transaction_list.html
